11/29/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.3.1.3 'Tolomei':
	- Reliability fixes (Issue 141 from rfc5766-turn-server).
	
11/23/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.3.1.2 'Tolomei':
	- Debian package fixes.
	
11/22/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.3.1.1 'Tolomei':
	- SQLite supported as the default user database.
	- Support of the flat-file user database removed.
	- TLS connection procedure improved in uclient test program.
	
11/07/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.2.3.1 'Monza':
	- Request re-transmission implemented in uclient test program.
	- TLS connection procedure improved in uclient test program.

10/26/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.2.2.2 'Monza':
	- Black- and white- IP lists are divided per realm
		(the DB schema for those two tables changed);
	- Updated Redis database schema.
	- Debian UFW file added (Issue 1 fixed).
	- TCP/TLS tests extended.
	- Relay RTCP sockets ports allocation fixed.
	- List of libraries cleaned.
	- SSL renegotiation callback fixed.

10/05/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.2.1.2 'Monza':
	- oAuth security experimental implementation;
	- The "TLS renegotiation" DoS attack prevention implemented;
	- FQDN as relay-ip and listener-ip parameters (issue 6)
	(patch provided by Iñaki Baz Castillo);
	- redis user key operation fixed.
	- redis, mysql and psql db operations fixed.
	- SHA-256 memory leak fixed.
	- Mobility ticket retransmission fixed.
	- Move debian package from SVN to GIT.
	- Move secondary download area to coturn.net.
	- Quota allocation fixed.
	- Core dump fixed.
	- Bandwidth allocation fixed.
	- Memory code cleaning.
	- Logging fixed.
	
08/14/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.1.2.1 'Vitari':
	- The origin attribute is verified in the subsequent 
	session messages (server flag --check-origin-consistency).
	- MySQL SSL connection support.
	- Crash fixed when the DB connection string is incorrect.